# psy_slider

./: .gitignore  README.md  alembic.ini  db.py  flask_config.py  main.py  package-lock.json  psy.py  pyproject.toml  requirements.txt  Диаграмма без названия.drawio
alembic/: env.py
alembic/versions/: 001412827caf_fix_alembic_stuff_again.py  2f9cb02fd952_autogenerate_user_id.py  35484948a9e9_add_question_and_share_link_columns_to_.py  3b81d2924842_add_session_status_and_session_id_to_.py  6ebc93bca76d_move_share_link_to_session.py  7e0be7a9e679_add_session_model_and_relationships.py  866b1d8e998c_add_username_password_to_user_table.py  b2cf24325fde_remove_user_choices_add_client_table.py  e8594c0fd244_initial_tables_user_choice.py  f77ed37a95aa_add_question_model.py
backend/: Dockerfile  auth.py  db.py  flask_config.py  main.py  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 23962d2ad17c_add_tg_id.py  6e28b11a5fd0_drop_choice_question_column.py  (+6 more)
backend/instance/: site.db
backend/static/: openapi.json
backend/templates/: add_client.html  client_page.html  login_page.html  main_page.html  register_page.html  swaggerui.html
backend/tests/: test_app.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.tsx
static/css/: styles.css
telegram-bot/: bot.py  pyproject.toml
templates/: add_client.html  admin_dashboard.html  client_history.html  client_page.html  graph_drawer.js  login_page.html  main_page.html  register_page.html  styles.css  thank_you_page.html  user_history.html  user_page.html
(+16 files in other folders)
