[tool.poetry]
name = "psy-slider"
version = "0.1.0"
description = ""
authors = ["Aleksandr Nemirov <anemirov@ivi.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
bcrypt = "^4.1.3"
black = "^24.4.2"
pytest = "^8.2.2"
pytest-flask = "^1.3.0"
python-dotenv = "^1.0.1"
flask-cors = "^4.0.1"
flask-jwt-extended = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
  | alembic
)/

'''