[project]
name = "psy-slider"
version = "0.1.0"
description = ""
authors = [{ name = "Aleksandr Nemirov", email = "anemirov@ivi.ru" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "flask>=3.0.3,<4",
    "flask-sqlalchemy>=3.1.1,<4",
    "bcrypt>=4.1.3,<5",
    "black>=24.4.2,<25",
    "pytest>=8.2.2,<9",
    "pytest-flask>=1.3.0,<2",
    "python-dotenv>=1.0.1,<2",
    "flask-cors>=4.0.1,<5",
    "flask-jwt-extended>=4.6.0,<5",
    "marshmallow>=3.21.3,<4",
    "marshmallow-sqlalchemy>=1.0.0,<2",
    "gunicorn>=23.0.0,<24",
    "aiogram>=3.16.0,<4",
    "alembic>=1.14.0,<2",
]

[tool.black]
exclude = '''
/(
  | alembic
)/

'''
